# spotify_viral

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: countries.yml
dashboard/: app.py
data/raw/spotify_charts/: README.md
scripts/: run_demo_pipeline.py  run_production_pipeline.py  smoke_test.py  validate_spotify_credentials.py
sql/: analytics_views.sql  schema.sql
src/music_intel/: config.py  paths.py  sample_data.py
src/music_intel/analysis/: cultural_correlation.py  viral_detection.py
src/music_intel/etl/: load.py  pipeline.py  spotify_charts_source.py  spotify_client.py  transform.py
tests/: test_transform.py  test_viral_detection.py
