[project]
name = "music-market-intelligence"
version = "0.1.0"
description = "Music trend analytics project with ETL, SQL, ML signals, and Streamlit dashboard."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "dashboard", "scripts", "tests"]
